# AGENTIC

./: .gitignore  README.md
SEMANTIC-LAYER/: Untitled  azhhae.yml  db_schema.ipynb  instructions.md  pyproject.toml
SEMANTIC-LAYER/SL/: payments.yml  sessions.yml  subscriptions.yml  users.yml
ai-workflows-dependency-audit/: README.md  main.py  pyproject.toml
postgres-mcp-server/: .env.example  .gitignore  README.md  main.py  pyproject.toml
postgres-mcp-server/postgres-mcp-server/: main.py
