[project]
name = "ai-workflows-dependency-audit"
version = "0.1.0"
description = "Audit repo to validate AI workflows bootcamp dependency compatibility"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "mcp>=1.16.0",
    "python-dotenv>=1.1.1",
    "langchain~=0.3.0",
    "langchain-core~=0.3.0",
    "langchain-openai~=0.2.0",
    "langgraph~=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit>=1.28.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandasai>=3.0.0",
    "pandasai-litellm>=0.0.1",
    "pandasai-sql>=0.1.7",
    "typing-extensions>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ruff>=0.6.5",
]

